Add Flyway configuration, update application properties, and enhance tests with Kafka support

--- a/resource-service/src/main/resources/application.yaml
+++ b/resource-service/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
