--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,37 @@ services:
     depends_on:
       - resource-postgres
       - kafka
+      - resource-publisher
+
+  resource-publisher:
+    build:
+      context: ./resource-publisher
+      dockerfile: resource-publisher.dockerfile
+    ports:
+      - "8086:8086"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://resource-postgres:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      - resource-postgres
+      - kafka
+
+  resource-consumer:
+    build:
+      context: ./resource-consumer
+      dockerfile: resource-consumer.dockerfile
+    ports:
+      - "8087:8087"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://resource-postgres:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    depends_on:
+      - resource-postgres
+      - kafka
 
   resource-postgres:
     image: postgres:13
