--- a/resource-service/src/test/resources/application.yml
+++ b/resource-service/src/test/resources/application.yml
@@ -5,11 +5,13 @@ spring:
     password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
+    show-sql: false
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: false
   kafka:
     bootstrap-servers: localhost:9092
 
