--- a/resource-service/src/main/resources/application.yaml
+++ b/resource-service/src/main/resources/application.yaml
@@ -9,11 +9,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
   kafka:
     bootstrap-servers: localhost:9092
     producer:
