--- a/resource-service/src/main/resources/application.yaml
+++ b/resource-service/src/main/resources/application.yaml
@@ -10,10 +10,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   kafka:
     bootstrap-servers: localhost:9092
     producer:
