--- a/resource-consumer/src/main/resources/application.yml
+++ b/resource-consumer/src/main/resources/application.yml
@@ -2,6 +2,20 @@ server:
   port: 8087
 
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: admin
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: false
+
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
