--- a/resource-publisher/src/main/resources/application.yml
+++ b/resource-publisher/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8086
-
 spring:
   application:
     name: resource-publisher
@@ -8,4 +5,6 @@ spring:
     bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+server:
+  port: 8086
