--- a/resource-consumer/src/main/resources/application.yml
+++ b/resource-consumer/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8087
 
 spring:
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -22,8 +25,9 @@ spring:
       group-id: resource-consumer
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       # optional tuning
       max-poll-records: 50
       properties:
-        isolation.level: read_committed
+        spring.json.trusted.packages: com.gatto.rms.contracts
+        spring.json.value.default.type: com.gatto.rms.contracts.ResourceView
