Enhance Kafka integration by improving consumer and publisher methods, adding idempotence settings, and updating resource handling logic

--- a/resource-publisher/src/main/resources/application.yml
+++ b/resource-publisher/src/main/resources/application.yml
@@ -6,5 +6,9 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      properties:
+        enable.idempotence: true
+        max.in.flight.requests.per.connection: 1
 server:
   port: 8086
