--- a/resource-consumer/src/main/resources/application.yml
+++ b/resource-consumer/src/main/resources/application.yml
@@ -11,12 +11,11 @@ spring:
     password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: false
 
   kafka:
